rename textarea, fix chatheader on mobile

--- a/src/shared/ui/Textarea/Textarea.module.scss
+++ b/src/shared/ui/Textarea/Textarea.module.scss
@@ -1,4 +1,4 @@
-.textArea {
+.textarea {
     resize: none;
 
     height: 32px;
